<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		splash_screen
     *	@date 		Tuesday 05th of September 2023 02:21:10 PM
     *	@title 		Page 2
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
    <ImageView
        android:id="@+id/dayflow_best_friends"
        android:layout_width="350dp"

        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="dayflow_best_friends"
        android:src="@drawable/dayflow_best_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="161dp"
        android:text="@string/get_closer_to_string"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="227dp"
        android:text="@string/everyone_string"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="60dp"
        android:text="@string/helps_you_to_contact_everyone_with_just_easy_way_string"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="164dp"
        android:background="@drawable/my_button"
        android:text="Get Started"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayflow_best_friends" />

</androidx.constraintlayout.widget.ConstraintLayout>